# lut_seal_simulation

./: README.md
src/: CMakeLists.txt  checkResult.cpp  ckks_2_relu.cpp  ckks_2_swish.cpp  ckks_4_relu.cpp  ckks_4_swish.cpp  ckks_6_relu.cpp  ckks_6_swish.cpp  ckks_8_relu.cpp  ckks_8_swish.cpp  demo.hpp  eval-function.cpp  extractOutput.cpp  extractOutputThree.cpp  extractOutputTwo.cpp  keyGeneration.cpp  makeInput.cpp  makeInputThree.cpp  makeInputTwo.cpp  makeQuery.cpp  makeQueryThree.cpp  makeQueryTwo.cpp  makeTable.cpp  poly.py  searchInput.cpp  searchInputThree.cpp  searchInputTwo.cpp
src/Table/plaintext_table/: relu_input_10_freq.txt  relu_input_12.txt  relu_input_12_freq.txt  relu_input_14.txt  relu_input_14_freq.txt  relu_input_6_freq.txt  relu_output_10.txt  relu_output_10_freq.txt  relu_output_12.txt  relu_output_12_freq.txt  relu_output_14.txt  relu_output_14_freq.txt  relu_output_6.txt  relu_output_6_freq.txt  relu_output_8.txt  relu_output_8_freq.txt  swish_input_10.txt  swish_input_6.txt  swish_input_8.txt  swish_input_8_freq.txt  swish_output_10.txt  swish_output_10_freq.txt  swish_output_12.txt  swish_output_12_freq.txt  swish_output_14.txt  swish_output_14_freq.txt  swish_output_6.txt  swish_output_6_freq.txt  swish_output_8.txt  swish_output_8_freq.txt
src/compare_lut/: comError.py  genPoly.py  lut_ptxt_eds.py  lut_ptxt_idas.py
src/naivebitwiseLUT/: CMakeLists.txt  README.md  bitwiselut.cpp
src/randomInput/: test_normal.txt  train_normal.txt
